--- a/package.json
+++ b/package.json
@@ -37,14 +37,16 @@
         "proposedapi": "node installTypings.js"
     },
     "devDependencies": {
-        "typescript": "^2.6.1",
-        "vscode": "^1.1.6",
+        "@types/mocha": "^2.2.42",
+        "@types/node": "^7.0.43",
+        "@types/requirejs": "^2.1.32",
         "azdata": "1.0.0",
         "tslint": "^5.8.0",
-        "@types/node": "^7.0.43",
-        "@types/mocha": "^2.2.42"
+        "typescript": "^2.6.1",
+        "vscode": "^1.1.6"
     },
     "dependencies": {
+        "requirejs": "^2.3.6",
         "vs": "^0.1.0"
     }
 }
